[gd_scene load_steps=2 format=3 uid="uid://cqefkhkl4httv"]

[ext_resource type="Script" path="res://scripts/display/DevButton.gd" id="1_gj3uw"]

[node name="DevelopmentButton" type="Button"]
custom_minimum_size = Vector2(64, 64)
offset_right = 64.0
offset_bottom = 64.0
script = ExtResource("1_gj3uw")

[connection signal="focus_entered" from="." to="." method="gain_focus"]
[connection signal="focus_exited" from="." to="." method="lose_focus"]
[connection signal="mouse_entered" from="." to="." method="set_filter"]
[connection signal="mouse_exited" from="." to="." method="unset_filter"]
[connection signal="pressed" from="." to="." method="trigger"]
